--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
           <resources>
             <labels>
               <all>
-                <space>Space2</space>
+                <space>plan9fromOSIOspace</space>
               </all>
             </labels>
           </resources>
